# scaluq

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  .yamllint  0001-WIP-gates-have-mask-not-qubit-list.patch  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  code-spell-checker-dictionary.txt  cuda.nix  default.nix  err.txt  flake.nix  genindex.html  index.html  log.tmp  log.txt  main.cpp  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tmp.txt
example_project/: CMakeLists.txt  main.cpp
exe/: CMakeLists.txt  SIMD_PATH_BENCHMARK.md  batch.hpp  main.cpp  main.py  matcpy.cpp  plot_simd_path_comparison.py  result.md  simd_path_qulacs_benchmark.cpp
python/: CMakeLists.txt  __init__.py  binding.cpp  docstring.hpp  doctest.py  generate_stubs.py  install_public_stubs.py
python/StateVector/: __init__.py
python/qulacs2023/: __init__.py  __init__.pyi  qulacs_core.pyi
python/scaluq/: __init__.py  __init__.pyi  gate.py  qulacs_core.pyi  scaluq_core.pyi
python/scaluq/bf16/: __init__.py
python/scaluq/default/: __init__.py
python/scaluq/f32/: __init__.py
python/scaluq/f64/: __init__.py
python/scaluq/gate/: __init__.py
python/scaluq/host/: __init__.py
qulacs/: CMakeLists.txt  all.hpp  constant.hpp  types.hpp
qulacs/circuit/: circuit.cpp  circuit.hpp
qulacs/gate/: constant.cpp  constant.hpp  gate.hpp  gate_factory.hpp  gate_matrix.cpp  gate_matrix.hpp  gate_npair_qubit.cpp  gate_npair_qubit.hpp  gate_one_control_one_target.cpp  gate_one_control_one_target.hpp  gate_one_qubit.cpp  gate_one_qubit.hpp  gate_pauli.cpp  gate_pauli.hpp  gate_quantum_matrix.cpp  gate_quantum_matrix.hpp  gate_two_qubit.cpp  gate_two_qubit.hpp  gate_zero_qubit.cpp  gate_zero_qubit.hpp  update_ops.hpp  update_ops_dense_matrix.cpp  update_ops_matrix_dense.cpp  update_ops_matrix_dense_single.cpp  update_ops_npair_qubit.cpp  update_ops_one_control_one_target.cpp  update_ops_one_qubit.cpp  update_ops_one_target_one_control.cpp  update_ops_pauli.cpp  update_ops_quantum_matrix.cpp  update_ops_two_qubit.cpp  update_ops_zero_qubit.cpp
qulacs/operator/: constant.hpp  general_quantum_operator.cpp  general_quantum_operator.hpp  operator.cpp  operator.hpp  pauli_operator.cpp  pauli_operator.hpp
qulacs/state/: state_vector.cpp  state_vector.hpp
qulacs/util/: bit_vector.hpp  exception.hpp  random.cpp  random.hpp  utility.hpp
scaluq/: CMakeLists.txt  all.hpp  constant.hpp  types.hpp
scaluq/circuit/: circuit.cpp  circuit.hpp
scaluq/gate/: gate.hpp  gate_factory.hpp  gate_matrix.cpp  gate_matrix.hpp  gate_npair_qubit.cpp  gate_npair_qubit.hpp  gate_one_control_one_target.cpp  gate_one_control_one_target.hpp  gate_one_qubit.cpp  gate_one_qubit.hpp  gate_parametric.hpp  gate_pauli.cpp  gate_pauli.hpp  gate_probablistic.hpp  gate_standard.hpp  gate_two_qubit.cpp  gate_two_qubit.hpp  gate_zero_qubit.cpp  gate_zero_qubit.hpp  merge_gate.cpp  merge_gate.hpp  param_gate.hpp  param_gate_factory.hpp  param_gate_one_qubit.hpp  param_gate_pauli.hpp  param_gate_probablistic.hpp  param_gate_standard.hpp  pgate.hpp  pgate_factory.hpp  pgate_one_qubit.hpp  pgate_pauli.hpp  update_ops.hpp  update_ops_dense_matrix.cpp  update_ops_npair_qubit.cpp  update_ops_one_control_one_target.cpp  update_ops_one_qubit.cpp  update_ops_pauli.cpp  update_ops_quantum_matrix.cpp  update_ops_sparse_matrix.cpp  update_ops_standard.cpp  (+4 more)
scaluq/info/: qubit_info.cpp  qubit_info.hpp
scaluq/operator/: apply_pauli.cpp  apply_pauli.hpp  operator.cpp  operator.hpp  pauli_operator.cpp  pauli_operator.hpp
scaluq/simulator/: noisesimulator.cpp  noisesimulator.hpp  simulator.cpp  simulator.hpp
scaluq/state/: state_vector.cpp  state_vector.hpp  state_vector_batched.cpp  state_vector_batched.hpp
scaluq/util/: bit_vector.hpp  random.cpp  random.hpp  utility.hpp
src/: CMakeLists.txt  kokkos.cpp  prec_space.hpp  scaluq_pch.cpp  scaluq_pch.hpp  types.cpp
src/analysis_stubs/: Kokkos_Core.hpp  Kokkos_Random.hpp  Kokkos_SIMD.hpp  Kokkos_StdAlgorithms.hpp
src/base/: kokkos.cpp
src/circuit/: circuit.cpp
src/core/: CMakeLists.txt  gate.hpp  random.cpp  random.hpp  state_vector.hpp  types.hpp
src/cpusim/: CMakeLists.txt  gate_one_qubit.cpp  omp_manager.cpp  omp_manager.hpp  state_vector_cpu.cpp  state_vector_cpu.hpp  update_ops.hpp  update_x.cpp
src/gate/: constant.cpp  gate.cpp  gate_matrix.cpp  gate_measurement.cpp  gate_one_qubit.cpp  gate_one_qubit.hpp  gate_pauli.cpp  gate_probabilistic.cpp  gate_probablistic.cpp  gate_standard.cpp  merge_gate.cpp  param_gate.cpp  param_gate_pauli.cpp  param_gate_probabilistic.cpp  param_gate_probablistic.cpp  param_gate_standard.cpp  update_ops.hpp  update_ops_dense_matrix.cpp  update_ops_dm.cpp  update_ops_dm_standard.cpp  update_ops_matrix.cpp  update_ops_matrix_1x1.hpp  update_ops_matrix_2x2.hpp  update_ops_matrix_4x4.hpp  update_ops_one_qubit.cpp  update_ops_sparse_matrix.cpp  update_ops_standard.cpp
src/kokkossim/: CMakeLists.txt  state_vector_kokkos.cpp  state_vector_kokkos.hpp
src/operator/: apply_pauli.cpp  apply_pauli.hpp  operator.cpp  operator_batched.cpp  pauli_operator.cpp
src/qasm/: qasm2.cpp
src/state/: density_matrix.cpp  state_vector.cpp  state_vector.hpp  state_vector_batched.cpp
src/util/: math.hpp  template.hpp  utility.cpp
tests/: CMakeLists.txt  dummy_test.cpp  kokkos_environment.hpp  test_environment.hpp
tests/circuit/: circuit_optimize_test.cpp  circuit_test.cpp  param_circuit_test.cpp  pcircuit_test.cpp  test_backprop.cpp  test_compute_expectation_gradient.cpp  test_compute_expectation_gradients.cpp
tests/cpusim/: CMakeLists.txt  gate_test.cpp  state_vector_test.cpp  util.hpp
tests/gate/: batched_gate_test.cpp  gate_dm_test.cpp  gate_test.cpp  merge_test.cpp  param_gate_test.cpp  pgate_test.cpp  util.hpp
tests/operator/: test_hamiltonian.cpp  test_operator.cpp  test_operator_batched.cpp  test_pauli_operator.cpp
tests/qasm/: qasm2_test.cpp
tests/state/: density_matrix_test.cpp  state_vector_batched_test.cpp  state_vector_test.cpp
tests/util/: util.hpp
(+187 files in other folders)
