[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "scikit_build_core.build"

[project]
name = "scaluq"
dynamic = ["version"]
description = "Quantum circuit simulator for research"
authors = [
    { name = "Qulacs-Osaka", email = "qulacs.osaka@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "scikit_build",
    "nanobind"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Communications :: Email"
]

[tool.scikit-build]
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/scaluq/_version.py"]

[tool.scikit-build.cmake.define]
SCALUQ_USE_OMP = {env="SCALUQ_USE_OMP", default="Yes"}
SCALUQ_USE_CUDA = {env="SCALUQ_USE_CUDA", default="No"}
SCALUQ_CUDA_ARCH = {env="SCALUQ_CUDA_ARCH"}

[tool.setuptools_scm]
write_to = "python/scaluq/_version.py"

[project.urls]
homepage = "http://www.scaluq.org"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "nanobind",
    "nanobind-stubgen",
    "openfermion"
]

test = [
    "openfermion"
]

ci = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "nanobind-stubgen",
    "openfermion"
]
