[build-system]
requires = ["scikit-build-core >= 0.4.3", "nanobind >= 2.0.0", "typing_extensions >= 4.0.0", "setuptools >= 77", "setuptools_scm >= 8"]
build-backend = "scikit_build_core.build"

[project]
name = "scaluq"
dynamic = ["version"]
description = "Quantum circuit simulator for research"
authors = [
    { name = "Qulacs-Osaka", email = "qulacs.osaka@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy >= 1.22.0",
    "scipy >= 1.11.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Communications :: Email"
]

[tool.scikit-build]
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/scaluq/_version.py"]

[tool.scikit-build.cmake.define]
CMAKE_C_COMPILER = {env="CMAKE_C_COMPILER"}
CMAKE_CXX_COMPILER = {env="CMAKE_CXX_COMPILER"}
SCALUQ_USE_OMP = {env="SCALUQ_USE_OMP"}
SCALUQ_USE_CUDA = {env="SCALUQ_USE_CUDA"}
SCALUQ_CUDA_ARCH = {env="SCALUQ_CUDA_ARCH"}
SCALUQ_FLOAT16 = {env="SCALUQ_FLOAT16"}
SCALUQ_FLOAT32 = {env="SCALUQ_FLOAT32"}
SCALUQ_FLOAT64 = {env="SCALUQ_FLOAT64"}
SCALUQ_BFLOAT16 = {env="SCALUQ_BFLOAT16"}

[tool.setuptools_scm]
write_to = "python/scaluq/_version.py"

[project.urls]
homepage = "http://www.scaluq.org"

[project.optional-dependencies]
doc = [
    "black == 24.4.2",
    "isort == 5.13.2",
    "nanobind == 2.0.0",
    "sphinx == 7.3.7",
    "sphinx-autoapi == 3.1.1",
    "sphinxcontrib-napoleon == 0.7",
    "sphinx_rtd_theme == 2.0.0",
    "sphinx-math-dollar == 1.2.1",
]
